<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_show_location">Show Location</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>

<!-- Location preferences strings -->
    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location preference -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default city id for location preference -->
    <string name="pref_default_city_name" translatable="false">Petah Tikva</string>

<!-- Temp units preferences strings -->
    <!-- Label for the temperature units preference -->
    <string name="pref_temp_units_label">Temperature Units</string>

    <!-- Key name for storing temp units preference -->
    <string name="pref_temp_units_key" translatable="false">temp_units</string>

    <!-- Default city id for location preference -->
    <string name="pref_default_temp_units" translatable="false">Metric</string>
    <string name="pref_units_imperial" translatable="false">Imperial</string>

</resources>
