<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_default_city_name"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_temp_units_label"
        android:dialogTitle="@string/pref_temp_units_label"
        android:key="@string/pref_temp_units_key"
        android:defaultValue="@string/pref_default_temp_units"
        android:entries="@array/temp_units_entries"
        android:entryValues="@array/temp_units_values" />

</PreferenceScreen>
